[gd_scene load_steps=18 format=3 uid="uid://ukduoa4pif62"]

[ext_resource type="Script" uid="uid://de58rp2h8u3f1" path="res://shared scripts/NormalRails.gd" id="1_nueqp"]
[ext_resource type="Texture2D" uid="uid://xp7hguu2wcws" path="res://point.png" id="2_apxbu"]
[ext_resource type="Script" uid="uid://bupn0rc8mbfxt" path="res://MusicRailSlider.gd" id="3_ahmg3"]
[ext_resource type="PackedScene" uid="uid://bjtfx8iv68e2w" path="res://rail.tscn" id="3_bwef6"]
[ext_resource type="Texture2D" uid="uid://d3hlcipa37df" path="res://railblue.png" id="4_apxbu"]
[ext_resource type="Theme" uid="uid://byp0imswcta2n" path="res://small.tres" id="4_drxx8"]
[ext_resource type="Texture2D" uid="uid://cpf748gr5u7ae" path="res://UI/slider.png" id="5_w540x"]
[ext_resource type="FontFile" uid="uid://cxdf4pwf3is8p" path="res://fonts/typeface-mario-world-pixel-font/TypefaceMarioWorldPixelFilledRegular-Yz84q.otf" id="6_7mvmu"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1sjpt"]
texture = ExtResource("5_w540x")
texture_margin_top = 10.0

[sub_resource type="FontFile" id="FontFile_phs05"]
fallbacks = Array[Font]([ExtResource("6_7mvmu")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/41/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/46/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/46/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/51/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/51/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/56/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/56/0/kerning_overrides/61/0 = Vector2(0, 0)
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/61/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/46/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/51/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/56/0 = Vector2(0, 0)
cache/0/61/0/kerning_overrides/61/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_wir6u"]
RichTextLabel/fonts/normal_font = SubResource("FontFile_phs05")

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pitch:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "appear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pitch:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.233258, 1),
"update": 0,
"values": [Vector2(0.1, 0.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_my4il"]
_data = {
&"RESET": SubResource("6"),
&"appear": SubResource("7")
}

[node name="bridge" type="Node2D" groups=["bridge"]]
z_index = -1
z_as_relative = false
script = ExtResource("1_nueqp")
color = Color(0.13, 0.58, 0.87, 1)
Param0 = "1200"

[node name="start" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_apxbu")
hframes = 2

[node name="end" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_apxbu")
hframes = 2

[node name="Button" type="Button" parent="end"]
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
theme_override_styles/focus = SubResource("3")
theme_override_styles/disabled = SubResource("3")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("3")

[node name="pitch" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
scale = Vector2(1e-05, 1e-05)
focus_mode = 2
script = ExtResource("3_ahmg3")

[node name="slider" type="HSlider" parent="pitch"]
offset_left = -54.0
offset_top = -40.0
offset_right = 218.0
offset_bottom = 21.0
scale = Vector2(0.4, 0.4)
focus_mode = 0
theme = ExtResource("4_drxx8")
theme_override_styles/slider = SubResource("StyleBoxTexture_1sjpt")
min_value = -1.0
max_value = 7.0
scrollable = false
tick_count = 9
ticks_on_borders = true

[node name="number" type="RichTextLabel" parent="pitch"]
offset_left = -53.0
offset_top = -61.0
offset_right = 477.0
offset_bottom = 75.0
scale = Vector2(0.2, 0.2)
mouse_filter = 2
theme = SubResource("Theme_wir6u")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 61
text = "0"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="pitch"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_my4il")
}
autoplay = "appear"

[node name="Rail" parent="." instance=ExtResource("3_bwef6")]
texture = ExtResource("4_apxbu")

[connection signal="focus_entered" from="pitch" to="pitch" method="_on_focus_entered"]
[connection signal="focus_exited" from="pitch" to="pitch" method="_on_focus_exited"]
[connection signal="value_changed" from="pitch/slider" to="pitch" method="_on_slider_value_changed"]
